--- a/config/database.yml
+++ b/config/database.yml
@@ -51,5 +51,5 @@ production:
   encoding: unicode
   database: uwharrie-offroad_production
   pool: 5
-  username: uwharrie-offroad
+  username: viget
   password:
